--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 		<canvas id="canvas"></canvas>
 		<div class="link">
 			View Source on 
-			<a href="https://github.com/Lukakva/Spiderman" target="_blank">Github</a>
+			<a href="https://github.com/manavnayak/Spiderman---By-Manav" target="_blank">Github</a>
 		</div>
 	</div>
 </body>
